src_old/objects/ReservationLocation__c.object
<CustomObject>
    <fields>
        <fullName>Address__c</fullName>
        <formula>Location__r.Address__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CapacityOverride__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Capacity Override</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <formula>Location__r.City__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>City</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ErrorCode__c</fullName>
        <label>Error Code</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ErrorMessage__c</fullName>
        <label>Error Message</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LocationDate__c</fullName>
        <formula>CASESAFEID(Location__c) + TEXT(ReservedDate__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Location Date</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LocationNumber__c</fullName>
        <formula>Location__r.LocationNumber__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Location Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location_Name__c</fullName>
        <formula>Location__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Location Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Location</label>
        <referenceTo>Location__c</referenceTo>
        <relationshipLabel>Reservation Locations</relationshipLabel>
        <relationshipName>Reservation_Locations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PostalCode__c</fullName>
        <formula>Location__r.PostalCodeName__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Postal Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProjectLocation__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project Location</label>
        <referenceTo>ProjectLocation__c</referenceTo>
        <relationshipLabel>Reservation Locations</relationshipLabel>
        <relationshipName>Reservation_Locations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Reservation__c</fullName>
        <label>Reservation</label>
        <referenceTo>Reservation__c</referenceTo>
        <relationshipLabel>Reservation Locations</relationshipLabel>
        <relationshipName>Reservation_Locations</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ReservedDate__c</fullName>
        <label>Reserved Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <formula>TEXT(Location__r.State__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>State</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Pending Reservation</fullName>
                </value>
                <value>
                    <fullName>Reserved</fullName>
                </value>
                <value>
                    <fullName>Failed</fullName>
                </value>
                <value>
                    <fullName>Canceled</fullName>
                </value>
                <value>
                    <fullName>Expired</fullName>
                </value>
                <value>
                    <fullName>Pending Cancellation</fullName>
                </value>
                <value>
                    <fullName>Pending Expiration</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Reservation Location</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>RL-{00000}</displayFormat>
        <label>Reservation Location Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Reservation Locations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>